<?xml version="1.0"?>
<package>
    <name>baybot_control</name>
    <version>0.0.1</version>
    <description>Baybot controller configurations</description>

    <maintainer email="nobody@example.com">payneio</maintainer>

    <license>All Rights Reserved</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>

    <run_depend>controller_manager</run_depend>
    <run_depend>diff_drive_controller</run_depend>
    <run_depend>interactive_marker_twist_server</run_depend>
    <run_depend>joint_state_controller</run_depend>
    <run_depend>joint_trajectory_controller</run_depend>
    <run_depend>joy</run_depend>
    <run_depend>multimaster_launch</run_depend>
    <run_depend>robot_localization</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>rostopic</run_depend>
    <run_depend>teleop_twist_joy</run_depend>
    <run_depend>twist_mux</run_depend>

    <run_depend>baybot_description</run_depend>

    <export>
    </export>
</package>
