<?xml version="1.0"?>
<package>
  <name>baybot_gazebo</name>
  <version>0.0.1</version>
  <description>Baybot Simulator</description>

  <maintainer email="nobody@example.com">payneio</maintainer>

  <license>All Rights Reserved</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>baybot_control</run_depend>
  <run_depend>baybot_description</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
