<?xml version="1.0"?>
<package>
  <name>baybot_viz</name>
  <version>0.0.1</version>
  <description>Baybot visualization</description>

  <maintainer email="nobody@example.com">payneio</maintainer>

  <license>All Rights Reserved</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>baybot_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
  </export>
</package>
